<resources>
    <string name="menu_home">Home</string>
    <string name="menu_favourites">WishList</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_myOrders">My Orders</string>
    <string name="menu_myCart">My Cart</string>
    <string name="check_out">Check Out</string>
    <string name="placement">Order Placement</string>
    <string name="no_cart_item">No Item found on Cart</string>
    <string name="no_order">No Item found on Order History</string>
    <string name="no_wish_List">No Item found on Wish List</string>
    <string name="no_product">Products not available</string>
    <string name="label_login">Login</string>
    <string name="no_records_found">No records found!</string>
    <string name="label_sign_up">Don\'t have a account ? Sign Up</string>
    <string name="label_skip">SKIP</string>
    <string name="label_forgot_password">Forgot Password?</string>
    <string name="label_Fra_forgot_password">Forgot Password</string>
    <string name="label_user_name">User Name</string>
    <string name="label_name">Name</string>
    <string name="label_password">Password</string>
    <string name="label_error_email">Enter Email Id</string>
    <string name="label_error_password">Enter Password</string>
    <string name="label_send">Send</string>
    <string name="label_hint_email">Enter your Email</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_email_address">Email Address</string>
    <string name="label_mobile_number">Mobile Number</string>
    <string name="label_sign_btn">Sign Up</string>

    <string name="terms_conditions">Terms \u0026 Conditions</string>
    <string name="error_first_name">Enter First Name</string>
    <string name="error_last_name">Enter Last Name</string>
    <string name="error_email">Enter Email Id</string>
    <string name="error_email_valid">Please Enter Valid Email Id</string>
    <string name="error_password">Enter Password</string>
    <string name="error_mobile">Enter Phone No</string>
    <string name="error_mobile_valid">Please Enter Valid Phone No</string>
    <string name="error_terms">Kindly accept the teams and condition policy...</string>
    <string name="label_accept">Accept</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_terms_and_condition">Terms and Condition</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="Rs">\u20B9</string>
    <string name="rs">\u20A8</string>
    <string name="label_products">Products</string>
    <string name="label_products_details">Products Details</string>
    <string name="label_add_to_cart">Add To Cart</string>
    <string name="description">Description</string>
    <string name="label_exit">Are you sure want to exit? </string>
    <string name="address">Address</string>
    <string name="address_one">Address One</string>
    <string name="address_two">Address Two</string>
    <string name="add_address">Add Address</string>
    <string name="earned_points">Earned</string>
    <string name="spend_points">Spend</string>
    <string name="balance_points">Balance</string>
    <string name="add_new_address">Add new address</string>
    <string name="contact_us">Contact Us</string>
    <string name="faq">Faq</string>
    <string name="return_policy">Return Policy</string>
    <string name="logout">Logout</string>
    <string name="label_about_us">About Us</string>
    <string name="label_privacy">Privacy</string>
    <string name="label_city">City</string>
    <string name="label_state">State</string>
    <string name="label_country">Country</string>
    <string name="label_add_address">Add Address</string>
    <string name="label_delete_address">Delete Address</string>
    <string name="label_pinCode">PinCode</string>
    <string name="label_add_name">Enter your Name</string>
    <string name="label_add_address_one">Enter your Address One</string>
    <string name="label_add_address_two">Enter your Address Two</string>
    <string name="label_mobile_length_error">Mobile number must be 10 digits</string>
    <string name="label_add_mobile">Enter your Mobile</string>
    <string name="label_add_city">Enter your City</string>
    <string name="label_add_state">Enter your State</string>
    <string name="label_add_country">Enter your Country</string>
    <string name="label_add_pinCode">Enter your PinCode</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="view_cart">View Cart</string>
    <string name="apply">Apply</string>
    <string name="sub_total">Sub Total</string>
    <string name="total">Total</string>
    <string name="discount">Discount</string>
    <string name="coupon_code">Coupon code</string>
    <string name="referral_number">Referral Number</string>
    <string name="coupon_offer">Coupon offer</string>
    <string name="tax">Tax</string>
    <string name="applied_coupon">Coupon Discount</string>
    <string name="applied_referral">Referral Discount</string>
    <string name="applied_shipping_cost">Shipping Cost</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="label_shop_by_category">Shop by Category</string>
    <string name="label_whats">Combo</string>
    <string name="label_default_address">Default Address</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="delivery_time">
        <item>9:00 AM to 10:00 AM</item>
        <item>10:00 AM to 11:00 AM</item>
        <item>11:00 AM to 12:00 PM</item>
        <item>12:00 PM to 1:00 PM</item>
        <item>1:00 PM to 2:00 PM</item>
        <item>2:00 PM to 3:00 PM</item>
        <item>3:00 PM to 4:00 PM</item>
        <item>4:00 PM to 5:00 PM</item>
        <item>5:00 PM to 6:00 PM</item>
        <item>6:00 PM to 7:00 PM</item>
    </string-array>

    <string name="notification_permission_title">Notifications</string>
    <string name="notification_permission_message">Allow notifications to receive important updates</string>
    <string name="notifications_disabled_warning">You won\'t receive important updates</string>
    <string name="update_available_title">New Update Available</string>
    <string name="update_available_message">Please update to the latest version for new features and bug fixes</string>
    <string name="update">Update Now</string>
    <string name="later">Later</string>
    <string name="continue_text">Continue</string>
    <string name="skip">Skip</string>

</resources>