<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.ForgetActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbAddAddress"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:gravity="center"
        android:background="@color/purple_500"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/add_address"
        tools:ignore="MissingPrefix" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbAddAddress">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/spacing_normal">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tvAYourName"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_20dp"
                android:hint="@string/label_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAFirstName"
                    style="@style/EditText"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:inputType="text"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    tools:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiAddressOne"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:hint="@string/address_one">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAddressOne"
                    style="@style/EditText"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    tools:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiAddressTwo"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:hint="@string/address_two">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAddressTwo"
                    style="@style/EditText"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    tools:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilMobile"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:hint="@string/label_mobile_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMobile"
                    style="@style/EditText"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLines="1"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    tools:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCity"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:hint="@string/label_city">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCity"
                    style="@style/EditText"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    tools:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilState"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:hint="@string/label_state">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etState"
                    style="@style/EditText"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    tools:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCountry"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:hint="@string/label_country">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCountry"
                    style="@style/EditText"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    tools:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPinCode"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:hint="@string/label_pinCode">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPinCode"
                    style="@style/EditText"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLines="1"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    tools:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:id="@+id/chkDefaultAddress"
                android:fontFamily="@font/roboto_medium"
                android:textSize="@dimen/size_14"
                android:layout_marginTop="@dimen/spacing_normal"
                android:text="@string/label_default_address"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/addAddress_button"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_marginTop="@dimen/spacing_normal"
                android:layout_marginBottom="@dimen/spacing_normal"
                android:text="@string/label_add_address"
                android:textColor="@android:color/white"
                android:textSize="@dimen/size_16"
                app:cornerRadius="@dimen/spacing_medium" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/deleteAddress_button"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:visibility="gone"
                android:layout_marginTop="@dimen/spacing_normal"
                android:layout_marginBottom="@dimen/spacing_normal"
                android:text="@string/label_delete_address"
                android:textColor="@android:color/white"
                android:textSize="@dimen/size_16"
                app:cornerRadius="@dimen/spacing_medium" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/pbAddAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>